# maskforai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  env.conf  install.sh
docs/: PII_SECRETS_RESEARCH.md  Two_Providers_Setup.md
src/: config.rs  entropy.rs  fakes.rs  filter_log.rs  lib.rs  main.rs  mask.rs  patterns.rs  proxy.rs  vault.rs  web.rs  web_ui.html  whistledown.rs
systemd/maskforai.service.d/: 10-adaptive-proxy.conf
tests/: integration_test.rs  test-detect-proxy.sh
