[package]
name = "maskforai"
version = "0.1.0"
edition = "2021"
description = "Local HTTP proxy that masks sensitive data in Claude Code requests before forwarding to relay"
license = "MIT"

[lib]
name = "maskforai"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
toml = "0.8"
sha2 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TLS: optional, use nginx/caddy reverse proxy for HTTPS in production

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
httpmock = "0.7"
